--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Daniel Lee
 #description: Minimal is a theme for GitHub Pages.
 #show_downloads: true
 #google_analytics:
-theme: minimal
+theme: jekyll-theme-minimal
